--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -175,15 +174,11 @@ iframe {
   text-transform: uppercase;
   transition: all .5s ease;
   border-radius: 2px;
-  /* Variaciones de tamaño */
   /* Variaciones de color */ }
   .btn:hover, .btn:focus {
     background-color: #f2f2f2; }
   .btn--raised {
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.4); }
-  .btn--cta {
-    font-size: 1.1rem;
-    padding: 14.70588px 19.23077px; }
   .btn--yellow {
     background-color: #ffda0c;
     color: black; }
@@ -401,15 +396,24 @@ iframe {
  * Slider
  */
 .slider {
-  position: relative; }
+  position: relative;
+  height: 100vh; }
+  @media screen and (min-width: 768px) {
+    .slider {
+      height: 600px; } }
+  @media screen and (min-width: 1280px) {
+    .slider {
+      height: 700px; } }
   .slider .slider-item {
     background-position: center;
     background-color: #1f3a93;
     background-size: cover;
     color: white;
     text-align: center;
-    height: 500px;
-    width: 100%; }
+    height: 100%;
+    width: 100%;
+    padding-top: 120px;
+    padding-bottom: 48px; }
     @media screen and (min-width: 768px) {
       .slider .slider-item {
         height: 600px; } }
@@ -418,32 +422,70 @@ iframe {
         height: 700px; } }
     .slider .slider-item .container {
       display: flex;
-      align-items: center;
-      height: 100%;
-      justify-content: space-between; }
-    .slider .slider-item__info {
-      width: 100%; }
-    .slider .slider-item__title {
-      font-size: 2rem;
-      text-shadow: 1px 1px 10px black;
-      text-transform: uppercase;
-      margin-top: 12.5px; }
+      flex-flow: column;
+      height: 100%; }
       @media screen and (min-width: 768px) {
-        .slider .slider-item__title {
-          font-size: 2.8rem; } }
-      @media screen and (min-width: 1280px) {
-        .slider .slider-item__title {
-          font-size: 3.4rem; } }
-    .slider .slider-item__intro {
-      font-size: 1rem;
-      text-shadow: 1px 1px 10px black;
-      font-weight: 600; }
+        .slider .slider-item .container {
+          flex-flow: row-reverse nowrap;
+          justify-content: space-around;
+          align-items: center; } }
+    .slider .slider-item .slider-item__image {
+      margin: 0;
+      padding: 0;
+      height: 40%; }
+      .slider .slider-item .slider-item__image img {
+        display: block;
+        height: 100%; }
       @media screen and (min-width: 768px) {
-        .slider .slider-item__intro {
-          font-size: 1rem; } }
+        .slider .slider-item .slider-item__image {
+          width: 320px;
+          height: 320px; }
+          .slider .slider-item .slider-item__image img {
+            height: 100%;
+            margin-left: auto;
+            margin-right: auto; } }
       @media screen and (min-width: 1280px) {
-        .slider .slider-item__intro {
-          font-size: 1.5rem; } }
+        .slider .slider-item .slider-item__image {
+          width: 380px;
+          height: 380px; } }
+    .slider .slider-item .slider-item__info {
+      height: 60%;
+      margin-bottom: 25px; }
+      @media screen and (min-width: 768px) {
+        .slider .slider-item .slider-item__info {
+          width: 360px;
+          height: auto;
+          text-align: left; } }
+      @media screen and (min-width: 992px) {
+        .slider .slider-item .slider-item__info {
+          width: 460px; } }
+      @media screen and (min-width: 992px) {
+        .slider .slider-item .slider-item__info {
+          width: 560px; } }
+    @media screen and (min-width: 768px) {
+      .slider .slider-item .slider-item__intro {
+        font-size: 1.4rem; } }
+    @media screen and (min-width: 992px) {
+      .slider .slider-item .slider-item__intro {
+        font-size: 1.4rem; } }
+    .slider .slider-item .slider-item__title {
+      font-size: 1.6rem; }
+      @media screen and (min-width: 768px) {
+        .slider .slider-item .slider-item__title {
+          font-size: 2.3rem; } }
+      @media screen and (min-width: 992px) {
+        .slider .slider-item .slider-item__title {
+          font-size: 3rem; } }
+
+/*
+ * Last result
+ */
+.last-result__box {
+  position: absolute;
+  height: 50px;
+  background-color: #ffda0c;
+  bottom: 0;
+  width: 100%; }
 
 /*
  * Featured 
