--- a/src/css/style.css
+++ b/src/css/style.css
@@ -134,7 +134,7 @@ iframe {
     background-color: transparent; }
 
 /*
- *
+ * Pager
  */
 .pager {
   margin: 0 12.5px 25px;
@@ -342,10 +342,94 @@ iframe {
         width: 70px; }
 
 /*
+ * Slider
+ */
+.slider {
+  position: relative;
+  height: 100vh; }
+  @media screen and (min-width: 768px) {
+    .slider {
+      height: 600px; } }
+  @media screen and (min-width: 1280px) {
+    .slider {
+      height: 700px; } }
+  .slider .slider-item {
+    background-position: center;
+    background-color: #1f3a93;
+    background-size: cover;
+    color: white;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    padding-top: 120px; }
+    @media screen and (min-width: 768px) {
+      .slider .slider-item {
+        height: 600px; } }
+    @media screen and (min-width: 1280px) {
+      .slider .slider-item {
+        height: 700px; } }
+    .slider .slider-item .container {
+      display: flex;
+      flex-flow: column;
+      height: 100%; }
+      @media screen and (min-width: 768px) {
+        .slider .slider-item .container {
+          flex-flow: row-reverse nowrap;
+          justify-content: space-around;
+          align-items: center; } }
+    .slider .slider-item .slider-item__image {
+      margin: 0;
+      padding: 0;
+      height: 50%; }
+      .slider .slider-item .slider-item__image img {
+        display: block;
+        height: 100%; }
+      @media screen and (min-width: 768px) {
+        .slider .slider-item .slider-item__image {
+          width: 320px;
+          height: 320px; }
+          .slider .slider-item .slider-item__image img {
+            height: 100%;
+            margin-left: auto;
+            margin-right: auto; } }
+      @media screen and (min-width: 1280px) {
+        .slider .slider-item .slider-item__image {
+          width: 380px;
+          height: 380px; } }
+    .slider .slider-item .slider-item__info {
+      height: 50%;
+      margin-bottom: 25px; }
+      @media screen and (min-width: 768px) {
+        .slider .slider-item .slider-item__info {
+          width: 360px;
+          height: auto;
+          text-align: left; } }
+      @media screen and (min-width: 992px) {
+        .slider .slider-item .slider-item__info {
+          width: 460px; } }
+      @media screen and (min-width: 992px) {
+        .slider .slider-item .slider-item__info {
+          width: 560px; } }
+    @media screen and (min-width: 768px) {
+      .slider .slider-item .slider-item__intro {
+        font-size: 1.4rem; } }
+    @media screen and (min-width: 992px) {
+      .slider .slider-item .slider-item__intro {
+        font-size: 1.5rem; } }
+    .slider .slider-item .slider-item__title {
+      font-size: 1.6rem; }
+      @media screen and (min-width: 768px) {
+        .slider .slider-item .slider-item__title {
+          font-size: 2.3rem; } }
+      @media screen and (min-width: 992px) {
+        .slider .slider-item .slider-item__title {
+          font-size: 3rem; } }
+
+/*
  * Cards
  */
 .card {
-  box-shadow: 0px 3px 5px 1px transparent;
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
   margin-bottom: 25px;
@@ -391,101 +475,6 @@ iframe {
   .card .card__buttons {
     text-align: right;
     padding: 0 16.66667px 12.5px; }
-
-/*
- * Slider
- */
-.slider {
-  position: relative;
-  height: 100vh; }
-  @media screen and (min-width: 768px) {
-    .slider {
-      height: 600px; } }
-  @media screen and (min-width: 1280px) {
-    .slider {
-      height: 700px; } }
-  .slider .slider-item {
-    background-position: center;
-    background-color: #1f3a93;
-    background-size: cover;
-    color: white;
-    text-align: center;
-    height: 100%;
-    width: 100%;
-    padding-top: 120px;
-    padding-bottom: 48px; }
-    @media screen and (min-width: 768px) {
-      .slider .slider-item {
-        height: 600px; } }
-    @media screen and (min-width: 1280px) {
-      .slider .slider-item {
-        height: 700px; } }
-    .slider .slider-item .container {
-      display: flex;
-      flex-flow: column;
-      height: 100%; }
-      @media screen and (min-width: 768px) {
-        .slider .slider-item .container {
-          flex-flow: row-reverse nowrap;
-          justify-content: space-around;
-          align-items: center; } }
-    .slider .slider-item .slider-item__image {
-      margin: 0;
-      padding: 0;
-      height: 40%; }
-      .slider .slider-item .slider-item__image img {
-        display: block;
-        height: 100%; }
-      @media screen and (min-width: 768px) {
-        .slider .slider-item .slider-item__image {
-          width: 320px;
-          height: 320px; }
-          .slider .slider-item .slider-item__image img {
-            height: 100%;
-            margin-left: auto;
-            margin-right: auto; } }
-      @media screen and (min-width: 1280px) {
-        .slider .slider-item .slider-item__image {
-          width: 380px;
-          height: 380px; } }
-    .slider .slider-item .slider-item__info {
-      height: 60%;
-      margin-bottom: 25px; }
-      @media screen and (min-width: 768px) {
-        .slider .slider-item .slider-item__info {
-          width: 360px;
-          height: auto;
-          text-align: left; } }
-      @media screen and (min-width: 992px) {
-        .slider .slider-item .slider-item__info {
-          width: 460px; } }
-      @media screen and (min-width: 992px) {
-        .slider .slider-item .slider-item__info {
-          width: 560px; } }
-    @media screen and (min-width: 768px) {
-      .slider .slider-item .slider-item__intro {
-        font-size: 1.4rem; } }
-    @media screen and (min-width: 992px) {
-      .slider .slider-item .slider-item__intro {
-        font-size: 1.4rem; } }
-    .slider .slider-item .slider-item__title {
-      font-size: 1.6rem; }
-      @media screen and (min-width: 768px) {
-        .slider .slider-item .slider-item__title {
-          font-size: 2.3rem; } }
-      @media screen and (min-width: 992px) {
-        .slider .slider-item .slider-item__title {
-          font-size: 3rem; } }
-
-/*
- * Last result
- */
-.last-result__box {
-  position: absolute;
-  height: 50px;
-  background-color: #ffda0c;
-  bottom: 0;
-  width: 100%; }
 
 /*
  * Featured 
